# copilot-sample-task

./: README.md  diamonds.csv  interactive.py  pyproject.toml  shell.nix
diamond_analysis/: __init__.py
